Bug Fix: correct the z-index for navbar layers

--- a/src/Styles/LoggedNavBar.module.css
+++ b/src/Styles/LoggedNavBar.module.css
@@ -10,6 +10,7 @@
 
   display: flex;
   background: #141414;
+  z-index: 9999;
 }
 a {
     color: #f0f8ff;
