--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -10,6 +10,8 @@
 
   display: flex;
   background: #141414;
+
+  z-index: 9999;
 }
 .leftNavBar,
 .rightNavBar {
